Updated accountVerification component and added style module

--- a/src/styles/pages/AccountVerification.module.css
+++ b/src/styles/pages/AccountVerification.module.css
@@ -1,18 +1,16 @@
 .container {
   display: flex;
   flex-direction: column;
-  /* min-height: 100vh; */
-  padding: 20px;
-  box-sizing: border-box;
-  max-width: 1200px;
-  /* margin: 0 auto; */
 }
 
 .header {
-  width: 0;
+  display: flex;
+  width: 100%;
+  justify-content: start;
 }
 
 .backButton {
+  width: 200px;
 }
 
 .mainContentFlex {
@@ -21,47 +19,48 @@
   grid-template-areas:
     "benefitsColumn headingColumn"
     "benefitsColumn formColumn";
-  gap: 30px;
-  align-items: start;
   flex-grow: 1;
+}
+
+.emailToDisplay {
+  font-weight: bold;
+  color: var(--color-light-green);
 }
 
 .benefitsBlock {
   grid-area: benefitsColumn;
   box-sizing: border-box;
-  padding: 20px;
+  align-content: center;
 }
 
 .headingBlock {
   grid-area: headingColumn;
   box-sizing: border-box;
-  padding: 20px;
 }
 
 .formBlock {
   grid-area: formColumn;
   box-sizing: border-box;
-  padding: 20px;
 }
 
 @media (max-width: 767px) {
   .mainContentFlex {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-
     grid-template-columns: unset;
     grid-template-areas: unset;
   }
 
   .headingBlock {
-    width: 100%;
     order: 1;
+    margin-top: 10px;
   }
   .benefitsBlock {
     order: 2;
+    margin-top: 30px;
   }
   .formBlock {
     order: 3;
+    margin-top: 100px;
   }
 }
