--- a/src/styles/pages/ConnectAccount.module.css
+++ b/src/styles/pages/ConnectAccount.module.css
@@ -1,12 +1,6 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
-  padding: 20px;
-  max-width: 1200px;
-  margin: 0 auto;
-  box-sizing: border-box;
-  align-items: flex-start;
 }
 
 .connectHeading,
@@ -14,20 +8,27 @@
 .emailFormWrapper,
 .agreementTextWrapper {
   flex: 1 1 calc(50% - 15px);
-  min-width: 300px;
   box-sizing: border-box;
   padding: 20px;
-  border-radius: 8px;
+  align-content: end;
 }
 
 .benefitsWrapper {
   order: 1;
+  align-content: end;
+  & div {
+    & p {
+      margin: 0.3em;
+    }
+  }
 }
 .connectHeading {
   order: 2;
+  align-content: flex-start;
 }
 .agreementTextWrapper {
   order: 3;
+  align-content: end;
 }
 .emailFormWrapper {
   order: 4;
@@ -36,7 +37,6 @@
 @media (max-width: 767px) {
   .container {
     flex-direction: column;
-    gap: 20px;
   }
 
   .connectHeading {
