--- a/src/styles/components/RadioOption.module.css
+++ b/src/styles/components/RadioOption.module.css
@@ -11,14 +11,12 @@
   background-clip: padding-box;
   background-origin: border-box;
   background-color: var(--color-purple-darker);
+  overflow: hidden;
 }
 
 .radioOptionContainer.checked {
   border: 3px solid transparent;
-  border-radius: 10px;
-
   background-color: var(--color-purple-darker);
-
   background-image: linear-gradient(
       var(--color-purple-darker),
       var(--color-purple-darker)
@@ -42,6 +40,9 @@
 }
 
 .radioLabel {
+  /* display: flex;
+  flex-direction: column;
+  width: 100%; */
   cursor: inherit;
   align-items: flex-start;
   width: 100%;
@@ -85,6 +86,9 @@
 
 @media (max-width: 600px) {
   .radioLabel {
+    flex-direction: row;
+    display: flex;
+    width: 100%;
     display: flex;
     align-items: center;
   }
