--- a/src/styles/pages/NotFound.module.css
+++ b/src/styles/pages/NotFound.module.css
@@ -10,3 +10,18 @@
 .backButton {
   align-self: flex-start;
 }
+
+.notFoundAnimation {
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+  pointer-events: none;
+}
+
+@media screen and (max-width: 600px) {
+  .notFoundAnimation {
+    position: absolute;
+  }
+}
