--- a/src/styles/pages/AccountVerification.module.css
+++ b/src/styles/pages/AccountVerification.module.css
@@ -13,7 +13,7 @@
   width: 200px;
 }
 
-.mainContentFlex {
+.mainContent {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-areas:
@@ -25,6 +25,11 @@
 .emailToDisplay {
   font-weight: bold;
   color: var(--color-light-green);
+}
+
+.loadingText {
+  text-align: center;
+  color: var(--color-white);
 }
 
 .benefitsBlock {
@@ -44,7 +49,7 @@
 }
 
 @media (max-width: 767px) {
-  .mainContentFlex {
+  .mainContent {
     display: flex;
     flex-direction: column;
     grid-template-columns: unset;
@@ -53,14 +58,14 @@
 
   .headingBlock {
     order: 1;
-    margin-top: 10px;
+    margin-top: 40pt;
   }
   .benefitsBlock {
     order: 2;
-    margin-top: 30px;
+    margin-top: 50pt;
   }
   .formBlock {
     order: 3;
-    margin-top: 100px;
+    margin-top: 150pt;
   }
 }
